// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </p>
</div>
`;

exports[`should render ExpensesSummary with 2 expenses 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totalling 
    $1,234,567.89
  </p>
</div>
`;
